--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,13 @@ jupyter-book
 matplotlib
 numpy
 streamlit
-numpy
 pandas
 seaborn
 scikit-learn
 joblib
 librosa
 plotly
-sounddevice
-wave
-
-
-
-
+pydub
+simpleaudio
+soundfile
+scipy
