--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 jupyter-book
 matplotlib
 numpy
-streamlit
 pandas
 seaborn
-scikit-learn
-joblib
-librosa
-plotly
+joblib==1.3.2
 pydub
 simpleaudio
 soundfile
 scipy
+librosa==0.10.1
+plotly==5.18.0
+streamlit==1.30.0
+scikit-learn==1.3.2
+
